Renaming variables and cosmetic code changes